--- a/src/pages/menu/menu.scss
+++ b/src/pages/menu/menu.scss
@@ -1,3 +1,23 @@
-page-menu {
-
+.card-background-page{
+    ion-card{
+        position: relative;
+        text-align: center;
+        margin: 0px !important;
+        width: 100% !important;
+    }
+    .card-title{
+        position: absolute;
+        font-size: 2em;
+        width: 100%;
+        font-weight: bold;
+        color: #fff;
+        top: 36%;
+    }
+    .card-subtitle{
+        font-size: 1em;
+        position: absolute;
+        top: 60%;
+        width: 100%;
+        color: #fff;
+    }
 }
